fixed explore single post layout issues

--- a/public/stylesheets/profile/profile.css
+++ b/public/stylesheets/profile/profile.css
@@ -366,7 +366,7 @@ ul .post.shown {
 
 .comment-container {
   max-width: 100%;
-  height: 112px;
+  min-height: 112px;
   display: block;
   padding: 15px;
   border-bottom: 1px solid #f3f5f7;
