--- a/public/stylesheets/profile/profile_explore.css
+++ b/public/stylesheets/profile/profile_explore.css
@@ -1,4 +1,4 @@
-.container {
+.container.topnav-offset {
   padding: 0;
   width: 986px;
 }
@@ -69,6 +69,11 @@
   height: 313px;
 }
 
+.post-image.single-post img {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 600px) {
   .nav-tabs, #latest, #popular, #featured {
     margin-left: 0px;
@@ -84,7 +89,7 @@
     margin-top: 44px;
   }
 
-  .container {
+  .container.topnav-offset {
     width: 498px;
   }
 
@@ -129,7 +134,7 @@
     margin-top: 44px;
   }
 
-  .container {
+  .container.topnav-offset {
     width: 420px;
   }
 
@@ -173,7 +178,7 @@
     margin-top: 44px;
   }
 
-  .container {
+  .container.topnav-offset {
     width: 318px;
   }
 
